# tethysapp-runoff_depth_calculator

./: .gitignore  CLAUDE.md  README.md  README.rst  install.yml  pyproject.toml
.github/workflows/: docs.yml
docs/superpowers/plans/: 2026-05-27-workshop-tutorial-site.md
docs/superpowers/specs/: 2026-05-27-workshop-tutorial-site-design.md
tethysapp/ciroh_devcon_2026_example/tests/: tests.py
tethysapp/runoff_depth_calculator/: app.py  compute.py
workshop/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
workshop/docs/: 01-setup.md  02-app-class.md  03-compute.md  03-map.md  04-layout.md  04-state.md  05-map.md  05-stepper.md  06-compute.md  06-stepper.md  07-results.md  07-state.md  08-results.md  08-ux-polish.md  09-conclusion.md  09-ux-polish.md  10-conclusion.md  intro.md
